--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         if (text === "alumno" && password === "2025") {
         alert("¡Bienvenido!");
         // Redirige a otra página
-        window.location.href = "../proyecto/menu/menu.html";
+        window.location.href = "../menu/menu.html";
         } else {
         alert("Correo o contraseña incorrectos");
         }
@@ -94,3 +94,4 @@
 
 
 </html>
+
